--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>U-Store</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
@@ -40,8 +41,8 @@
     </nav>
     <!--------------- HEADER----------data-aos-once="true"-- -->
 
-    <header>
-      <div id="header-container">
+    <header id="header">
+      <div class="header-container">
         <div class="row">
           <div class="col-1">
             <h2>
@@ -54,8 +55,8 @@
             </p>
             <a href="" class="btn">Shop Now&#8594;</a>
           </div>
-          <div class="col-1" data-aos="fade-left">
-            <img src="images/iphone.jpg" />
+          <div class="col-1" >
+            <img src="images/iphone.jpg"/>
           </div>
         </div>
       </div>
@@ -63,7 +64,7 @@
 
 	<main>
 
-		<div class="container">
+		
 		  <!-- -----------PRODUCTS ------------->
 	
 		  <div id="product">
@@ -207,7 +208,7 @@
 		  <div id="feature">
 			<div class="small-container">
 			  <div class="row row-2">
-				<div class="col-3" data-aos="fade-right">
+				<div class="col-3" data-aos="fade-right" data-aos-once="true">
 				  <a href=""
 					><p><span>Mobile phone and Accessories</span></p></a
 				  >
@@ -223,7 +224,7 @@
 				  <a href=""><p>Iphone XR</p></a>
 				  <a href=""><p>Iphone X</p></a>
 				</div>
-				<div class="col-3" data-aos="fade-down">
+				<div class="col-3" data-aos="fade-down" data-aos-once="true">
 				  <a href=""
 					><p><span>Men's Clothing and Accessories</span></p></a
 				  >
@@ -239,9 +240,9 @@
 				  <a href=""><p>Puma Rs-Dreamer</p></a>
 				  <a href=""><p>Nike Boost</p></a>
 				</div>
-				<div class="col-3" data-aos="fade-left">
+				<div class="col-3" data-aos="fade-left" data-aos-once="true">
 				  <a href=""
-					><p><span>Newly Listed</span></p></a
+					><p><span>Newly Listed Products</span></p></a
 				  >
 				  <a href=""><p>Zara Shoes</p></a>
 				  <a href=""><p>Adidas Sweats</p></a>
